gateway/httproute.yaml
# ─── HTTPRoute: ArgoCD ──────────────────────────────────────────────────────
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      sectionName: https
  hostnames:
    - "argocd.integration-project-2026-groep-2.my.be"
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 443
